syntax = "proto3";

import "ibc/core/connection/v1/tx.proto";
import "ibc/core/channel/v1/tx.proto";
import "ibc/core/client/v1/tx.proto";

package penumbra.ibc;

message IBCAction {
    oneof action {
      .ibc.core.connection.v1.MsgConnectionOpenInit connectionOpenInit = 1;
      .ibc.core.connection.v1.MsgConnectionOpenTry connectionOpenTry = 2;
      .ibc.core.connection.v1.MsgConnectionOpenAck connectionOpenAck = 3;
      .ibc.core.connection.v1.MsgConnectionOpenConfirm connectionOpenConfirm = 4;

      .ibc.core.channel.v1.MsgChannelOpenTry channelOpenTry = 5;
      .ibc.core.channel.v1.MsgChannelOpenAck channelOpenAck = 6;
      .ibc.core.channel.v1.MsgChannelOpenConfirm channelOpenConfirm = 7;
      .ibc.core.channel.v1.MsgChannelCloseInit channelCloseInit = 8;
      .ibc.core.channel.v1.MsgChannelCloseConfirm channelCloseConfirm = 9;
      
      .ibc.core.channel.v1.MsgRecvPacket recvPacket = 10;
      .ibc.core.channel.v1.MsgTimeout timeout = 11;
      .ibc.core.channel.v1.MsgAcknowledgement acknowledgement = 12;

      .ibc.core.client.v1.MsgCreateClient createClient = 13;
      .ibc.core.client.v1.MsgUpdateClient updateClient = 14;
      .ibc.core.client.v1.MsgUpgradeClient upgradeClient = 15;
      .ibc.core.client.v1.MsgSubmitMisbehaviour submitMisbehaviour = 16;
  }
}